--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h1>Website Official HoC Record dalam pengembangan</h1>
       <button
         class="hoc-instagram"
-        onclick="window.location.href='https://instagram.com/hoc_record'"
+        onclick="window.location.href='https://instagram.com/hoc_studioo'"
       >
         Visit Instagram
       </button>
